@@ -1,4 +1,4 @@
-# RCSid $Id: Rmakefile,v 2.50 2014/04/26 15:59:38 greg Exp $
+# RCSid $Id: Rmakefile,v 2.51 2016/07/27 18:05:53 greg Exp $
 #
 # Makefile for conversion programs
 #
@@ -22,7 +22,7 @@ LIBDIR = /usr/local/lib/ray
 
 PROGS = ies2rad nff2rad lampcolor tmesh2rad obj2rad \
 mgf2rad rad2mgf mgf2meta mgfilt mgf2inv 3ds2mgf \
-pabopto2bsdf bsdf2ttree bsdf2klems pkgBSDF epw2wea
+pabopto2xyz pabopto2bsdf bsdf2ttree bsdf2klems pkgBSDF epw2wea
 
 LIBFILES = source.cal tilt.cal lamp.tab window.cal
 
@@ -74,6 +74,10 @@ mgf2inv:	mgf2inv.o
 3ds2mgf:	3ds2mgf.o rayopt3ds.o vect3ds.o
 	$(CC) $(CFLAGS) -o 3ds2mgf 3ds2mgf.o rayopt3ds.o vect3ds.o \
 -lmgf -lrtrad $(MLIB)
+
+pabopto2xyz:	pabopto2xyz.o
+	$(CXX) $(CXXFLAGS) -o pabopto2xyz pabopto2xyz.o \
+-lrtrad $(MLIB)
 
 pabopto2bsdf:	pabopto2bsdf.o bsdfrep.o bsdfrbf.o bsdfmesh.o bsdftrans.o
 	$(CXX) $(CXXFLAGS) -o pabopto2bsdf pabopto2bsdf.o bsdfrep.o \
